src/test/ui/issues/issue-33571.rs
#[derive(Clone,
         Sync, //~ ERROR cannot find derive macro `Sync` in this scope
         Copy)]
enum Foo {}

fn main() {}
